OTAT-468: Impl a default error handler

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,5 @@
+common.internal.error=An unexpected error occurred
+
 create-assessment.title.notBlank=Title may not be empty
 create-assessment.title.size.min=Title length must be more than 3
 create-assessment.title.size.max=Title length must be less than 100
