--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,5 +5,6 @@ create-assessment.title.size.min=Title length must be more than 3
 create-assessment.title.size.max=Title length must be less than 100
 create-assessment.assessmentKitId.notNull=Assessment Kit may not be empty
 create-assessment.spaceId.notNull=Space may not be empty
-create-assessment.title-spaceId.unique-constraint.violation.message=Title already exists on this space
 create-assessment.colorId.notFound.message=Color id is not valid
+
+submit-answer.assessmentResultId.notFound.message=Assessment result id is not valid
