--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -7,3 +7,5 @@ create-assessment.assessmentKitId.notNull=Assessment Kit may not be empty
 create-assessment.spaceId.notNull=Space may not be empty
 create-assessment.title-spaceId.unique-constraint.violation.message=Title already exists on this space
 create-assessment.colorId.notFound.message=Color id is not valid
+
+calculate-maturity-level.assessment.id.notNull=Assessment may not be empty
