OTAT-464: Add error messages

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -9,3 +9,5 @@ create-assessment.title-spaceId.unique-constraint.violation.message=Title alread
 create-assessment.colorId.notFound.message=Color id is not valid
 
 calculate-maturity-level.assessment.id.notNull=Assessment may not be empty
+calculate-maturity-level.answer.notFound.message=Answer is not valid
+calculate-maturity-level.maturity-level.notFound.message=Maturity level is not valid
