--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -8,3 +8,6 @@ create-assessment.spaceId.notNull=Space may not be empty
 create-assessment.colorId.notFound.message=Color id is not valid
 
 submit-answer.assessmentResultId.notFound.message=Assessment result id is not valid
+submit-answer.assessmentResultId.notNull= Assessment result id may not be empty
+submit-answer.questionId.notNull= Question id may not be empty
+submit-answer.answerOptionId.notNull= Answer option may not be empty
