OTAT-553: Add create evidence to question service

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -7,3 +7,9 @@ create-assessment.assessmentKitId.notNull=Assessment Kit may not be empty
 create-assessment.spaceId.notNull=Space may not be empty
 create-assessment.title-spaceId.unique-constraint.violation.message=Title already exists on this space
 create-assessment.colorId.notFound.message=Color id is not valid
+add-evidence.desc.notBlank=Description may not be empty
+add-evidence.desc.size.min=Description length must be more than 3
+add-evidence.desc.size.max=Description length must be less than 100
+add-evidence.createdById.notNull=Created by user may not be empty
+add-evidence.assessmentId.notNull=Assessment may not be empty
+add-evidence.questionId.notNull=Question may not be empty
