--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -11,3 +11,5 @@ submit-answer.assessmentResultId.notFound.message=Assessment result id is not va
 submit-answer.assessmentResultId.notNull= Assessment result id may not be empty
 submit-answer.questionId.notNull= Question id may not be empty
 submit-answer.answerOptionId.notNull= Answer option may not be empty
+
+get-assessment-list.spaceId.notNull=Space may not be empty
