--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -13,3 +13,7 @@ submit-answer.questionId.notNull= Question id may not be empty
 submit-answer.answerOptionId.notNull= Answer option may not be empty
 
 get-assessment-list.spaceId.notNull=Space may not be empty
+get-assessment-list.spaceId.equal-or-greater-than-zero=Space id may be equal or greater than zero
+get-assessment-list.size.min=Size must be more than 10
+get-assessment-list.size.max=Size must be less than 100
+get-assessment-list.page.min=Page must be more than 0
