--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -6,9 +6,13 @@ create-assessment.title.size.max=Title length must be less than 100
 create-assessment.assessmentKitId.notNull=Assessment Kit may not be empty
 create-assessment.spaceId.notNull=Space may not be empty
 create-assessment.colorId.notFound.message=Color id is not valid
-get-evidence-list.questionId.notNull=Question may not be empty
 
 submit-answer.assessmentResultId.notFound.message=Assessment result id is not valid
 submit-answer.assessmentResultId.notNull= Assessment result id may not be empty
 submit-answer.questionId.notNull= Question id may not be empty
 submit-answer.answerOptionId.notNull= Answer option may not be empty
+
+get-evidence-list.questionId.notNull=Question may not be empty
+get-evidence-list.size.min=Size must be more than 10
+get-evidence-list.size.max=Size must be less than 100
+get-evidence-list.page.min=Page must be more than 0
