OTAT-552: Change some error msgs

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,19 +1,17 @@
 common.internal.error=An unexpected error occurred
 
-create-assessment.title.notBlank=Title may not be empty
-create-assessment.title.size.min=Title length must be more than 3
-create-assessment.title.size.max=Title length must be less than 100
-create-assessment.assessmentKitId.notNull=Assessment Kit may not be empty
-create-assessment.spaceId.notNull=Space may not be empty
-create-assessment.colorId.notFound.message=Color id is not valid
+create-assessment.title.notBlank=title may not be empty
+create-assessment.title.size.min=title length must be more than 3
+create-assessment.title.size.max=title length must be less than 100
+create-assessment.assessmentKitId.notNull='assessmentKitId' may not be empty
+create-assessment.spaceId.notNull='spaceId' may not be empty
 
-submit-answer.assessmentResultId.notFound.message=Assessment result id is not valid
-submit-answer.assessmentResultId.notNull= Assessment result id may not be empty
-submit-answer.questionId.notNull= Question id may not be empty
-submit-answer.answerOptionId.notNull= Answer option may not be empty
+submit-answer.assessmentResultId.notFound.message='assessmentResultId' is not valid
+submit-answer.assessmentResultId.notNull='assessmentResultId' may not be empty
+submit-answer.questionId.notNull='questionId' may not be empty
+submit-answer.answerOptionId.notNull='answerOptionId' may not be empty
 
-get-assessment-list.spaceId.notNull=Space may not be empty
-get-assessment-list.spaceId.equal-or-greater-than-zero=Space id may be equal or greater than zero
-get-assessment-list.size.min=Size must be more than 10
-get-assessment-list.size.max=Size must be less than 100
-get-assessment-list.page.min=Page must be more than 0
+get-assessment-list.spaceId.notNull='spaceId' may not be empty
+get-assessment-list.size.min='size' must be greater than or equal to 1
+get-assessment-list.size.max='size' must be less than or equal to 100
+get-assessment-list.page.min='page' must be greater than or equal to 0
