--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -15,3 +15,12 @@ get-assessment-list.spaceId.notNull='spaceId' may not be empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
 get-assessment-list.size.max='size' must be less than or equal to 100
 get-assessment-list.page.min='page' must be greater than or equal to 0
+
+edit-evidence.id.notNull=evidence 'id' may not be empty
+edit-evidence.description.notBlank=description may not be empty
+edit-evidence.description.size.min=description length must be more than 3
+edit-evidence.description.size.max=description length must be less than 100
+edit-evidence.createdById.notNull='createdById' may not be empty
+edit-evidence.assessmentId.notNull='assessmentId' may not be empty
+edit-evidence.question.notNull='questionId' may not be empty
+edit-evidence.evidence-not-found=Evidence not found
