--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -9,6 +9,7 @@ create-assessment.spaceId.notNull='spaceId' may not be empty
 submit-answer.assessmentResultId.notFound.message='assessmentResultId' is not valid
 submit-answer.assessmentResultId.notNull='assessmentResultId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
+submit-answer.isApplicable.notNull='isApplicable' may not be empty
 
 get-assessment-list.spaceId.notNull='spaceId' may not be empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
