FAC-15:feature:Throw exception when Answer submission is not allowed

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -10,6 +10,7 @@ submit-answer.assessmentResultId.notFound.message='assessmentResultId' is not va
 submit-answer.assessmentResultId.notNull='assessmentResultId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
 submit-answer.isApplicable.notNull='isApplicable' may not be empty
+submit-answer.answer-is-not-applicable.message=Not applicable Answer may not have 'optionId'
 
 get-assessment-list.spaceId.notNull='spaceId' may not be empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
