--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -15,3 +15,6 @@ get-assessment-list.spaceId.notNull='spaceId' may not be empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
 get-assessment-list.size.max='size' must be less than or equal to 100
 get-assessment-list.page.min='page' must be greater than or equal to 0
+
+delete-evidence.evidence-not-found=evidence not found
+delete-evidence.evidence-id.notNull='evidenceId' may not be empty
