FAC-15-feature:Rename isApplicable to isNotApplicable

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -9,7 +9,7 @@ create-assessment.spaceId.notNull='spaceId' may not be empty
 submit-answer.assessmentResultId.notFound.message='assessmentResultId' is not valid
 submit-answer.assessmentResultId.notNull='assessmentResultId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
-submit-answer.isApplicable.notNull='isApplicable' may not be empty
+submit-answer.isNotApplicable.notNull='isNotApplicable' may not be empty
 submit-answer.answer-is-not-applicable.message=Not applicable Answer may not have 'optionId'
 
 get-assessment-list.spaceId.notNull='spaceId' may not be empty
