--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -15,3 +15,11 @@ get-assessment-list.spaceId.notNull='spaceId' may not be empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
 get-assessment-list.size.max='size' must be less than or equal to 100
 get-assessment-list.page.min='page' must be greater than or equal to 0
+
+edit-assessment.assessment.notFound=assessment may not found
+edit-assessment.id.notNull='assessmentId' may not be null
+edit-assessment.title.notBlank=title may not be empty
+edit-assessment.title.min=title length must be more than 3
+edit-assessment.title.max=title length must be less than 100
+edit-assessment.assessment-kit-id.notNull='assessmentKitId' may not be empty
+edit-assessment.color-id.notNull='colorId' may not be empty
