--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -18,9 +18,9 @@ get-assessment-list.size.min='size' must be greater than or equal to 1
 get-assessment-list.size.max='size' must be less than or equal to 100
 get-assessment-list.page.min='page' must be greater than or equal to 0
 
-add-evidence.desc.notBlank=Description may not be empty
-add-evidence.desc.size.min=Description length must be more than 3
-add-evidence.desc.size.max=Description length must be less than 100
-add-evidence.createdById.notNull=Created by user may not be empty
-add-evidence.assessmentId.notNull=Assessment may not be empty
-add-evidence.questionId.notNull=Question may not be empty
+add-evidence.desc.notBlank=description may not be empty
+add-evidence.desc.size.min=description length must be more than 3
+add-evidence.desc.size.max=description length must be less than 1000
+add-evidence.createdById.notNull='createdById' may not be empty
+add-evidence.assessmentId.notNull='assessmentId' may not be empty
+add-evidence.questionId.notNull='questionId' may not be empty
