FAC 20: Add error messages for foreignKey constraints

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,10 +5,15 @@ create-assessment.title.size.min=title length must be more than 3
 create-assessment.title.size.max=title length must be less than 100
 create-assessment.assessmentKitId.notNull='assessmentKitId' may not be empty
 create-assessment.spaceId.notNull='spaceId' may not be empty
+create-assessment.duplicate.titleAndSpaceId=An assessment with the same 'title' and 'spaceId' already exists.
 
-create-assessmentresult.assessment.notFound.message='assessmentId' is not valid
+create-assessmentresult.assessmentId.notFound='assessmentId' is not valid
 
-submit-answer.assessmentResultId.notFound.message='assessmentResultId' is not valid
+create-qualityattributevalue.assessmentResultId.notFound='assessmentResultId' is not valid
+
+crate-subjectvalue.assessmentResultId.notFound='assessmentResultId' is not valid
+
+submit-answer.assessmentResultId.notFound='assessmentResultId' is not valid
 submit-answer.assessmentResultId.notNull='assessmentResultId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
 submit-answer.answerOptionId.notNull='answerOptionId' may not be empty
