--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -23,6 +23,7 @@ get-assessment-list.size.min='size' must be greater than or equal to 1
 get-assessment-list.size.max='size' must be less than or equal to 100
 get-assessment-list.page.min='page' must be greater than or equal to 0
 
+add-evidence.assessmentId.notFound='assessmentId' is not valid
 add-evidence.desc.notBlank=description may not be empty
 add-evidence.desc.size.min=description length must be more than 3
 add-evidence.desc.size.max=description length must be less than 1000
