--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -31,6 +31,7 @@ add-evidence.createdById.notNull='createdById' may not be empty
 add-evidence.assessmentId.notNull='assessmentId' may not be empty
 add-evidence.questionId.notNull='questionId' may not be empty
 
-calculate-maturity-level.assessment.id.notNull=Assessment may not be empty
-calculate-maturity-level.answer.notFound.message=Answer is not valid
-calculate-maturity-level.maturity-level.notFound.message=Maturity level is not valid
+calculate-maturity-level.assessment.id.notNull='assessmentId' may not be empty
+calculate-maturity-level.answer.notFound='answerId' is not valid
+calculate-maturity-level.maturity-level.notFound='maturityLevelId' is not valid
+calculate-maturity-level.assessment-result.notFound='assessmentResultId' is not valid
