--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -31,3 +31,6 @@ add-evidence.desc.size.max=description length must be less than 1000
 add-evidence.createdById.notNull='createdById' may not be empty
 add-evidence.assessmentId.notNull='assessmentId' may not be empty
 add-evidence.questionId.notNull='questionId' may not be empty
+
+calculate-assessment.assessment.id.notNull='assessmentId' may not be empty
+calculate-assessment.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
