--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -44,3 +44,6 @@ calculate-assessment.assessmentResult.notFount=no assessmentResult found by this
 
 get-answer-list.assessmentId.notNull='assessmentId' may not be empty
 get-answer-list.questionnaireId.notNull='questionnaireId' may not be empty
+get-answer-list.size.min=='size' must be greater than or equal to 1
+get-answer-list.size.max=='size' must be less than or equal to 100
+get-answer-list.page.min=='page' must be greater than or equal to 0
