FAC-23:feature:Refactor LoadAnswersByQuestionnaireIdPort and implementation

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -47,3 +47,4 @@ get-answer-list.questionnaireId.notNull='questionnaireId' may not be empty
 get-answer-list.size.min=='size' must be greater than or equal to 1
 get-answer-list.size.max=='size' must be less than or equal to 100
 get-answer-list.page.min=='page' must be greater than or equal to 0
+get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
