--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -49,7 +49,7 @@ get-answer-list.size.max=='size' must be less than or equal to 100
 get-answer-list.page.min=='page' must be greater than or equal to 0
 get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 
-get-evidence-list.questionId.notNull=Question may not be empty
-get-evidence-list.size.min=Size must be more than 10
-get-evidence-list.size.max=Size must be less than 100
-get-evidence-list.page.min=Page must be more than 0
+get-evidence-list.questionId.notNull='questionId' may not be empty
+get-evidence-list.size.min='size' must be more than 10
+get-evidence-list.size.max='size' must be less than 100
+get-evidence-list.page.min='page' must be more than 0
