--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -44,12 +44,12 @@ calculate-assessment.assessmentResult.notFount=no assessmentResult found by this
 
 get-answer-list.assessmentId.notNull='assessmentId' may not be empty
 get-answer-list.questionnaireId.notNull='questionnaireId' may not be empty
-get-answer-list.size.min=='size' must be greater than or equal to 1
-get-answer-list.size.max=='size' must be less than or equal to 100
-get-answer-list.page.min=='page' must be greater than or equal to 0
+get-answer-list.size.min='size' must be greater than or equal to 1
+get-answer-list.size.max='size' must be less than or equal to 100
+get-answer-list.page.min='page' must be greater than or equal to 0
 get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 
 get-evidence-list.questionId.notNull='questionId' may not be empty
-get-evidence-list.size.min='size' must be more than 10
-get-evidence-list.size.max='size' must be less than 100
-get-evidence-list.page.min='page' must be more than 0
+get-evidence-list.size.min='size' must be greater than or equal to 1
+get-evidence-list.size.max='size' must be less than or equal to 100
+get-evidence-list.page.min='page' must be greater than or equal to 0
