--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -41,10 +41,13 @@ update-assessment.color-id.notNull='colorId' may not be empty
 
 calculate-assessment.assessment.id.notNull='assessmentId' may not be empty
 calculate-assessment.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
-
 get-answer-list.assessmentId.notNull='assessmentId' may not be empty
 get-answer-list.questionnaireId.notNull='questionnaireId' may not be empty
 get-answer-list.size.min=='size' must be greater than or equal to 1
 get-answer-list.size.max=='size' must be less than or equal to 100
 get-answer-list.page.min=='page' must be greater than or equal to 0
 get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
+report-assessment.assessment.id.notNull='assessmentId' may not be empty
+report-assessment.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
+report-assessment.maturityLevelId.notFound='maturityLevelId' is not valid
+report-assessment.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
