--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -50,6 +50,7 @@ get-answer-list.page.min='page' must be greater than or equal to 0
 get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 
 get-evidence-list.questionId.notNull='questionId' may not be empty
+get-evidence-list.assessmentId.notNull='assessmentId' may not be empty
 get-evidence-list.size.min='size' must be greater than or equal to 1
 get-evidence-list.size.max='size' must be less than or equal to 100
 get-evidence-list.page.min='page' must be greater than or equal to 0
