FAC-42:fix:Use assessmentId for SubmitAnswerUseCase Param

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -13,8 +13,8 @@ create-qualityattributevalue.assessmentResultId.notFound='assessmentResultId' is
 
 crate-subjectvalue.assessmentResultId.notFound='assessmentResultId' is not valid
 
-submit-answer.assessmentResultId.notFound='assessmentResultId' is not valid
-submit-answer.assessmentResultId.notNull='assessmentResultId' may not be empty
+submit-answer.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
+submit-answer.assessmentId.notNull='assessmentId' may not be empty
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
 
