FAC-36: Complete subject report service with tests

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -58,3 +58,6 @@ report-assessment.assessment.id.notNull='assessmentId' may not be empty
 report-assessment.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 report-assessment.maturityLevelId.notFound='maturityLevelId' is not valid
 report-assessment.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
+
+report-subject.subject.id.notNull='subjectId' may not be empty
+report-subject.assessmentResult.notFound=no assessmentResult found by this 'subjectId'
