--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -59,5 +59,5 @@ report-assessment.assessmentResult.notFound=no assessmentResult found by this 'a
 report-assessment.maturityLevelId.notFound='maturityLevelId' is not valid
 report-assessment.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 
-get-answered-questions-count.assessment.id.notNull='assessmentId' may not be empty
-get-answered-questions-count.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
+get-assessment-progress.assessment.id.notNull='assessmentId' may not be empty
+get-assessment-progress.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
