FAC-36: Change api address

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -60,5 +60,6 @@ report-assessment.assessmentResult.notFound=no assessmentResult found by this 'a
 report-assessment.maturityLevelId.notFound='maturityLevelId' is not valid
 report-assessment.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 
+report-subject.assessment.id.notNull='assessmentId' may not be empty
 report-subject.subject.id.notNull='subjectId' may not be empty
 report-subject.assessmentResult.notFound=no assessmentResult found by this 'subjectId'
