FAC-43: Implement service (No tests)

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -60,4 +60,5 @@ report-assessment.maturityLevelId.notFound='maturityLevelId' is not valid
 report-assessment.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 
 get-subject-progress.assessment.id.notNull='assessmentId' may not be empty
+get-subject-progress.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 get-subject-progress.subject.id.notNull='subjectId' may not be empty
