--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -65,3 +65,6 @@ get-assessment-progress.assessmentResult.notFound=no assessmentResult found by t
 report-subject.assessment.id.notNull='assessmentId' may not be empty
 report-subject.subject.id.notNull='subjectId' may not be empty
 report-subject.assessmentResult.notFound=no assessmentResult found by this 'subjectId'
+report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentResultId' and 'subjectId'
+report-subject.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
+report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
