--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -71,8 +71,7 @@ report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentRe
 report-subject.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
 
-edit-evidence.id.notNull=evidence 'id' may not be empty
-edit-evidence.description.notBlank=description may not be empty
-edit-evidence.description.size.min=description length must be more than 3
-edit-evidence.description.size.max=description length must be less than 100
-edit-evidence.evidence-not-found=Evidence not found
+update-evidence.id.notNull=evidence 'id' may not be empty
+update-evidence.description.notBlank=description may not be empty
+update-evidence.description.size.min=description length must be more than 3
+update-evidence.description.size.max=description length must be less than 100
