--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -70,3 +70,8 @@ report-subject.assessmentResult.notFound=no assessmentResult found by this 'subj
 report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentResultId' and 'subjectId'
 report-subject.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
+
+get-comparable-assessments.spaceIds.notNull='spaceIds' may not be null or empty
+get-comparable-assessments.size.min='size' must be greater than or equal to 1
+get-comparable-assessments.size.max='size' must be less than or equal to 100
+get-comparable-assessments.page.min='page' must be greater than or equal to 0
