--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -73,5 +73,5 @@ report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
 
 update-evidence.id.notNull=evidence 'id' may not be empty
 update-evidence.description.notBlank=description may not be empty
-update-evidence.description.size.min=description length must be more than 3
-update-evidence.description.size.max=description length must be less than 100
+update-evidence.description.size.min=description length must be more than or equal to 3
+update-evidence.description.size.max=description length must be less than or equal to 1000
