FAC-24:feature:Rename all "RemoveAssessment"s to DeleteAssessment

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -71,4 +71,4 @@ report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentRe
 report-subject.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
 
-remove-assessment.assessmentId.notNull='assessmentId' may not be empty
+delete-assessment.assessmentId.notNull='assessmentId' may not be empty
