--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -79,3 +79,5 @@ update-evidence.description.size.max=description length must be less than or equ
 get-subject-progress.assessment.id.notNull='assessmentId' may not be empty
 get-subject-progress.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 get-subject-progress.subject.id.notNull='subjectId' may not be empty
+
+check-comparative-assessments.assessment.list.notNull='assessmentIds' may not be null or empty
