FAC-28: Complete service and tests

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -84,3 +84,4 @@ get-assessment-space.assessmentId.notNull='assessmentId' may not be empty
 get-assessment-space.assessmentId.notFound=no assessment found by this 'assessmentId'
 
 check-comparative-assessments.assessment.list.notNull='assessmentIds' may not be null or empty
+check-comparative-assessments.assessments.notComparable=assessments are not comparable
