FAC-50: Convert GetAssessmentSpace service to GetAssessment

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -78,5 +78,5 @@ update-evidence.description.size.max=description length must be less than or equ
 get-subject-progress.assessment.id.notNull='assessmentId' may not be empty
 get-subject-progress.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 get-subject-progress.subject.id.notNull='subjectId' may not be empty
-get-assessment-space.assessmentId.notNull='assessmentId' may not be empty
-get-assessment-space.assessmentId.notFound=no assessment found by this 'assessmentId'
+get-assessment.assessmentId.notNull='assessmentId' may not be empty
+get-assessment.assessmentId.notFound=no assessment found by this 'assessmentId'
