--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -32,6 +32,7 @@ add-evidence.assessmentId.notNull='assessmentId' may not be empty
 add-evidence.questionId.notNull='questionId' may not be empty
 
 update-assessment.id.notNull='assessmentId' may not be null
+update-assessment.id.notFound=no assessment found by this 'assessmentId'
 update-assessment.title.notBlank=title may not be empty
 update-assessment.title.min=title length must be more than 3
 update-assessment.title.max=title length must be less than 100
@@ -49,6 +50,7 @@ get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'a
 
 get-evidence-list.questionId.notNull='questionId' may not be empty
 get-evidence-list.assessmentId.notNull='assessmentId' may not be empty
+get-evidence-list.assessmentId.notFound='assessmentId' is not valid
 get-evidence-list.size.min='size' must be greater than or equal to 1
 get-evidence-list.size.max='size' must be less than or equal to 100
 get-evidence-list.page.min='page' must be greater than or equal to 0
@@ -71,6 +73,7 @@ report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentRe
 report-subject.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
 
+update-evidence.assessmentId.notFound='assessmentId' is not valid
 update-evidence.id.notNull=evidence 'id' may not be empty
 update-evidence.description.notBlank=description may not be empty
 update-evidence.description.size.min=description length must be more than or equal to 3
