FAC-24:feature:Add CheckAssessmentExistence to DeleteAssessmentService

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -83,4 +83,5 @@ get-subject-progress.assessment.id.notNull='assessmentId' may not be empty
 get-subject-progress.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 get-subject-progress.subject.id.notNull='subjectId' may not be empty
 
-delete-assessment.assessmentId.notNull='assessmentId' may not be empty
+delete-assessment.id.notNull='assessmentId' may not be empty
+delete-assessment.id.notFound='assessmentId' is not valid
