--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -19,7 +19,7 @@ submit-answer.assessmentId.notNull='assessmentId' may not be empty
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
 
-get-assessment-list.spaceId.notNull='spaceId' may not be empty
+get-assessment-list.spaceId.notNullOrEmpty='spaceIds' may not be null or empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
 get-assessment-list.size.max='size' must be less than or equal to 100
 get-assessment-list.page.min='page' must be greater than or equal to 0
@@ -83,8 +83,3 @@ get-subject-progress.subject.id.notNull='subjectId' may not be empty
 
 get-assessment.assessmentId.notNull='assessmentId' may not be empty
 get-assessment.assessmentId.notFound=no assessment found by this 'assessmentId'
-
-get-comparable-assessments.spaceIds.notNull='spaceIds' may not be null or empty
-get-comparable-assessments.size.min='size' must be greater than or equal to 1
-get-comparable-assessments.size.max='size' must be less than or equal to 100
-get-comparable-assessments.page.min='page' must be greater than or equal to 0
