FAC-15: Fix message

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -15,7 +15,7 @@ create-qualityattributevalue.assessmentResultId.notFound='assessmentResultId' is
 crate-subjectvalue.assessmentResultId.notFound='assessmentResultId' is not valid
 
 submit-answer.assessmentResultId.notNull='assessmentResultId' may not be null
-submit-answer.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
+submit-answer.assessmentResultId.notFound=no assessmentResult found
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
 submit-answer.isNotApplicable.notNull='isNotApplicable' may not be empty
