FAC-29:feature:Impl compare assessments service

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -71,6 +71,12 @@ report-subject.assessmentResult.notFound=no assessmentResult found by this 'subj
 report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentResultId' and 'subjectId'
 report-subject.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
+
+compare-assessments.assessmentIds.notNull='assessmentIds' may not be empty
+compare-assessments.assessmentIds.size-min='assessmentIds' size must be greater than or equal to 2
+compare-assessments.assessmentIds.size-max='assessmentIds' size must be less than or equal to 4
+compare-assessments.assessmentResult.notFound='assessmentId' is not valid
+
 update-evidence.id.notNull=evidence 'id' may not be empty
 update-evidence.description.notBlank=description may not be empty
 update-evidence.description.size.min=description length must be more than or equal to 3
