FAC-29:feature:Add assessments comparable validation

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -78,6 +78,7 @@ compare-assessments.assessmentIds.notNull='assessmentIds' may not be empty
 compare-assessments.assessmentIds.size-min='assessmentIds' size must be greater than or equal to 2
 compare-assessments.assessmentIds.size-max='assessmentIds' size must be less than or equal to 4
 compare-assessments.assessmentResult.notFound='assessmentId' is not valid
+compare-assessments.assessments.notComparable=assessments are not comparable
 
 update-evidence.id.notNull=evidence 'id' may not be empty
 update-evidence.description.notBlank=description may not be empty
