FAC-29:feature:Refactor

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -77,7 +77,7 @@ report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
 compare-assessments.assessmentIds.notNull='assessmentIds' may not be empty
 compare-assessments.assessmentIds.size-min='assessmentIds' size must be greater than or equal to 2
 compare-assessments.assessmentIds.size-max='assessmentIds' size must be less than or equal to 4
-compare-assessments.assessmentResult.notFound='assessmentId' is not valid
+compare-assessments.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 compare-assessments.assessments.notComparable=assessments are not comparable
 
 update-evidence.id.notNull=evidence 'id' may not be empty
