--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -91,5 +91,5 @@ delete-assessment.id.notFound='assessmentId' is not valid
 
 count-assessments.assessment.kit.id.notNull='assessmentKitId' may not be empty
 
-delete-evidence.evidence-not-found=evidence not found
-delete-evidence.evidence-id.notNull='evidenceId' may not be empty
+delete-evidence.id.notFound=no evidence found by this 'evidenceId'
+delete-evidence.id.notNull='evidenceId' may not be empty
