--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -89,7 +89,7 @@ get-assessment.assessmentId.notFound=no assessment found by this 'assessmentId'
 delete-assessment.id.notNull='assessmentId' may not be empty
 delete-assessment.id.notFound='assessmentId' is not valid
 
-count-assessments.assessment.kit.id.notNull='assessmentKitId' may not be empty
+count-assessments.assessment.kit.id.and.space.id.notNull='assessmentKitId' and 'spaceId' may not both be empty
 
 delete-evidence.id.notFound=no evidence found by this 'evidenceId'
 delete-evidence.id.notNull='evidenceId' may not be empty
