FAC-87: Create basis for calculation of confidence level

--- a/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
@@ -93,3 +93,6 @@ count-assessments.assessment.kit.id.and.space.id.notNull='assessmentKitId' and '
 
 delete-evidence.id.notFound=no evidence found by this 'evidenceId'
 delete-evidence.id.notNull='evidenceId' may not be empty
+
+calculate-confidence-level.assessment.id.notNull='assessmentId' may not be empty
+calculate-confidence-level.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
