--- a/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
@@ -94,5 +94,5 @@ count-assessments.assessment.kit.id.and.space.id.notNull='assessmentKitId' and '
 delete-evidence.id.notFound=no evidence found by this 'evidenceId'
 delete-evidence.id.notNull='evidenceId' may not be empty
 
-calculate-confidence-level.assessment.id.notNull='assessmentId' may not be empty
-calculate-confidence-level.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
+calculate-confidence.assessment.id.notNull='assessmentId' may not be empty
+calculate-confidence.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
