FAC-89: Add confidence value validity check to assessment load adapter

--- a/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
@@ -60,6 +60,7 @@ report-assessment.assessment.id.notNull='assessmentId' may not be empty
 report-assessment.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 report-assessment.maturityLevelId.notFound='maturityLevelId' is not valid
 report-assessment.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
+report-assessment.assessmentResult.confidenceValue.notValid=confidenceValue of assessmentResult is not valid. Recalculation is needed
 
 get-assessment-progress.assessment.id.notNull='assessmentId' may not be empty
 get-assessment-progress.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
