FAC-99: Create edit kit service and models and read from json

--- a/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
@@ -95,4 +95,6 @@ delete-evidence.id.notFound=no evidence found by this 'evidenceId'
 delete-evidence.id.notNull='evidenceId' may not be empty
 
 calculate-confidence.assessment.id.notNull='assessmentId' may not be empty
-calculate-confidence.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
+calculate-confidence.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
+
+edit-kit.kit-content.notValid=kit content is not valid
