--- a/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
@@ -96,3 +96,6 @@ delete-evidence.id.notNull='evidenceId' may not be empty
 
 calculate-confidence.assessment.id.notNull='assessmentId' may not be empty
 calculate-confidence.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
+
+edit-kit.kitId.notNull='kitId' may not be null
+edit-kit.content.notNull=content may not be empty
