--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -1,4 +1,4 @@
 common.internal.error=An unexpected error occurred
 
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
-update-kit-by-dsl.dsl-content.notNull=content may not be empty
+update-kit-by-dsl.dslContent.notNull='dslContent' may not be empty
