FAC-106: Fix update maturity level

--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,4 @@
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
-update-kit-by-dsl.dsl-content.notValid='dslContent' is not valid
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
+update-kit-by-dsl.dsl-content.notValid='dslContent' is not valid
+update-kit-by-dsl.maturity-level.notValid=entered maturityLevel is not valid
