--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -1,4 +1,5 @@
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
+update-kit-by-dsl.kit.notFound=kit not found
 update-kit-by-dsl.dsl-content.notValid='dslContent' is not valid
-update-kit-by-dsl.maturity-level.notValid=entered maturityLevel is not valid
+update-kit-by-dsl.kit-change.notValid=kit changes are not valid
