FAC-106: Use DslTranslator class to parse dsl json

--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -1,5 +1,6 @@
+translate-kit-dsl.unable.to.parse.json = error in parsing dsl content
+
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
 update-kit-by-dsl.kit.notFound=kit not found
-update-kit-by-dsl.dsl-content.notValid='dslContent' is not valid
 update-kit-by-dsl.kit-change.notValid=kit changes are not valid
