--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -1,8 +1,7 @@
 translate-kit-dsl.unable.to.parse.json = error in parsing dsl content
 
 find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
+find-kit.id.notFound=AssessmentKit with the given id does not exist
 
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
-update-kit-by-dsl.kit.notFound=kit not found
-update-kit-by-dsl.kit-change.notValid=kit changes are not valid
