--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -1,7 +1,6 @@
-translate-kit-dsl.unable.to.parse.json = error in parsing dsl content
-
+translate-kit-dsl.unable.to.parse.json=error in parsing dsl content
 find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
 find-kit.id.notFound=AssessmentKit with the given id does not exist
-
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
+update-subject-by-dsl.subject.code.notChange='subject name' may not change
