FAC-107:feature:Add unit tests for SubjectUpdateValidator

--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -3,4 +3,6 @@ find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
 find-kit.id.notFound=AssessmentKit with the given id does not exist
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
+update-subject-by-dsl.subject.notRemove='subject' may not be removed
+update-subject-by-dsl.subject.notAdd='subject' may not be added
 update-subject-by-dsl.subject.code.notChange='subject name' may not change
