--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -7,3 +7,5 @@ update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
 update-kit-by-dsl.delete-question.notAllowed=question deletion is not allowed
 update-kit-by-dsl.add-question.notAllowed=question addition is not allowed
+update-kit-by-dsl.maturity-level.notFound=maturity level not found
+update-kit-by-dsl.attribute.notFound=quality attribute not found
