--- a/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
@@ -6,3 +6,4 @@ find-kit.id.notFound=AssessmentKit with the given id does not exist
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.dsl-content.notNull='dslContent' may not be empty
 update-kit-by-dsl.questionnaire-deletion.notAllowed=questionnaire deletion not allowed
+update-kit-by-dsl.questionnaire-deletion.notAllowed2=questionnaire deletion [%s] not [%s] allowed
