FAC-109:feature:Validate attribute's code update

--- a/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-kit/src/main/resources/i18n/messages_en.properties
@@ -9,3 +9,7 @@ update-kit-by-dsl.questionnaire-deletion.notAllowed=questionnaire deletion not a
 
 update-subject-by-dsl.subject.notRemove='subject' may not be removed
 update-subject-by-dsl.subject.notAdd='subject' may not be added
+
+update-attribute-by-dsl.attribute-deletion.notAllowed = 'attribute' deletion not allowed
+update-attribute-by-dsl.attribute-addition.notAllowed = 'attribute' addition not allowed
+
