--- a/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
@@ -1,4 +1,4 @@
-translate-kit-dsl.unable.to.parse.json = error in parsing dsl content
+translate-kit-dsl.unable.to.parse.json=error in parsing dsl content
 
 find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
 find-kit.id.notFound=AssessmentKit with the given id does not exist
@@ -18,8 +18,8 @@ entities.questionnaire.plural=questionnaires
 update-kit-by-dsl.addition.unsupported={0} addition is not supported. These {1} have been added in the new DSL file: {2}.
 update-kit-by-dsl.deletion.unsupported={0} deletion is not supported. These {1} have been deleted in the new DSL file: {2}.
 
-update-kit-by-dsl.questionnaire-deletion.notAllowed=questionnaire deletion not allowed
 update-kit-by-dsl.delete-question.notAllowed=question deletion is not allowed
 update-kit-by-dsl.add-question.notAllowed=question addition is not allowed
 update-kit-by-dsl.maturity-level.notFound=maturity level not found
 update-kit-by-dsl.attribute.notFound=quality attribute not found
+update-kit-by-dsl.answer-option.notFound=answer option not found
