--- a/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
@@ -14,6 +14,8 @@ entities.subject.single.first=Subject
 entities.subject.plural=subjects
 entities.questionnaire.single.first=Questionnaire
 entities.questionnaire.plural=questionnaires
+entities.attribute.single.first=Attribute
+entities.attribute.plural=attributes
 
 update-kit-by-dsl.addition.unsupported={0} addition is not supported. These {1} have been added in the new DSL file: {2}.
 update-kit-by-dsl.deletion.unsupported={0} deletion is not supported. These {1} have been deleted in the new DSL file: {2}.
