FAC-147: Create usecase

--- a/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
@@ -19,3 +19,6 @@ update-kit-by-dsl.addition.unsupported={0} addition is not supported. These {1} 
 update-kit-by-dsl.deletion.unsupported={0} deletion is not supported. These {1} have been deleted in the new DSL file: {2}.
 
 update-kit-by-dsl.answer-option.notFound=answer option not found
+
+delete-user-access.kitId.notNull='kitId' may not be null
+delete-user-access.userId.notNull='userId' may not be null
