FAC-147: Complete service

--- a/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
@@ -22,3 +22,6 @@ update-kit-by-dsl.answer-option.notFound=answer option not found
 
 delete-user-access.kitId.notNull='kitId' may not be null
 delete-user-access.userId.notNull='userId' may not be null
+delete-user-access.kit.notFound=AssessmentKit with the given id does not exist
+delete-user-access.user.notFound=User with the given id does not exist
+delete-user-access.kit-user.notFound=User access does not exist
