--- a/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
@@ -19,3 +19,9 @@ update-kit-by-dsl.addition.unsupported={0} addition is not supported. These {1} 
 update-kit-by-dsl.deletion.unsupported={0} deletion is not supported. These {1} have been deleted in the new DSL file: {2}.
 
 update-kit-by-dsl.answer-option.notFound=answer option not found
+
+grant-user-access-to-kit.kitId.notNull='kitId' may not be null
+grant-user-access-to-kit.userEmail.notNull='userEmail' may not be null
+grant-user-access-to-kit.currentUser.notNull='currentUser' may not be null
+grant-user-access-to-kit.kitId.notFound=AssessmentKit with the given id does not exist
+grant-user-access-to-kit.userEmail.notFound=User account with the given email does not exist
