--- a/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/kit/messages_en.properties
@@ -20,7 +20,7 @@ update-kit-by-dsl.deletion.unsupported={0} deletion is not supported. These {1} 
 
 update-kit-by-dsl.answer-option.notFound=answer option not found
 
-get-user-list.kit-id.notNull='kitId' may not be null
-get-user-list.page.min='page' must be greater than or equal to 0
-get-user-list.size.min='size' must be less than or equal to 1
-get-user-list.size.max='size' must be greater than or equal to 100
+get-kit-user-list.kit-id.notNull='kitId' may not be null
+get-kit-user-list.page.min='page' must be greater than or equal to 0
+get-kit-user-list.size.min='size' must be less than or equal to 1
+get-kit-user-list.size.max='size' must be greater than or equal to 100
