FAC-150: Create columns and changesets

--- a/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
@@ -6,6 +6,7 @@ create-assessment.title.size.max=title length must be less than 100
 create-assessment.assessmentKitId.notNull='assessmentKitId' may not be empty
 create-assessment.spaceId.notNull='spaceId' may not be empty
 create-assessment.colorId.notNull='colorId' may not be empty
+create-assessment.createdBy.notNull='createdBy' may not be null
 create-assessment.duplicate.titleAndSpaceId=An assessment with the same 'title' and 'spaceId' already exists.
 
 create-assessmentresult.assessmentId.notFound='assessmentId' is not valid
