--- a/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-core/src/main/resources/i18n/messages_en.properties
@@ -18,6 +18,7 @@ submit-answer.assessmentId.notNull='assessmentId' may not be null
 submit-answer.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
+submit-answer.createdBy.notNull='createdBy' may not be empty
 
 get-assessment-list.spaceId.notNullOrEmpty='spaceIds' may not be null or empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
