--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -19,6 +19,7 @@ submit-answer.assessmentResult.notFound=no assessmentResult found by this 'asses
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
 submit-answer.createdBy.notNull='createdBy' may not be empty
+submit-answer.user.notFound=User with given id not found
 
 get-assessment-list.spaceId.notNullOrEmpty='spaceIds' may not be null or empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
