--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -22,9 +22,9 @@ update-kit-by-dsl.answer-option.notFound=answer option not found
 
 grant-user-access-to-kit.kitId.notNull='kitId' may not be null
 grant-user-access-to-kit.userEmail.notNull='userEmail' may not be null
-grant-user-access-to-kit.currentUserEmail.notNull='currentUser' may not be null
+grant-user-access-to-kit.currentUserId.notNull='currentUser' may not be null
 grant-user-access-to-kit.kitId.notFound=AssessmentKit with the given id does not exist
 grant-user-access-to-kit.kitOwner.notFound=AssessmentKit Owner with the given id does not exist
 grant-user-access-to-kit.userEmail.notFound=User account with the given email does not exist
 grant-user-access-to-kit.userEmail.alreadyExist=User with the given email already has access to kit
-grant-user-access-to-kit.currentUser.notAllowed=You can not add user to kit
+grant-user-access-to-kit.currentUser.notKitOwner='currentUser' can not add user to kit
