FAC-146:feature:Convert currentUser.notKitOwner message to common currentUser.notAllowed message

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -1,3 +1,5 @@
+common.currentUser.notAllowed=You do have access to perform this action
+
 translate-kit-dsl.unable.to.parse.json=error in parsing dsl content
 
 find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
@@ -26,4 +28,3 @@ grant-user-access-to-kit.currentUserId.notNull='currentUser' may not be null
 grant-user-access-to-kit.kitId.notFound=AssessmentKit with the given id does not exist
 grant-user-access-to-kit.kitOwner.notFound=AssessmentKit Owner with the given id does not exist
 grant-user-access-to-kit.userEmail.notFound=User account with the given email does not exist
-grant-user-access-to-kit.currentUser.notKitOwner='currentUser' can not add user to kit
