--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -26,5 +26,5 @@ grant-user-access-to-kit.kitId.notNull='kitId' may not be null
 grant-user-access-to-kit.userEmail.notNull='userEmail' may not be null
 grant-user-access-to-kit.currentUserId.notNull='currentUser' may not be null
 grant-user-access-to-kit.kitId.notFound=AssessmentKit with the given id does not exist
-grant-user-access-to-kit.kitOwner.notFound=AssessmentKit Owner with the given id does not exist
+grant-user-access-to-kit.expertGroupOwner.notFound='Expert Group' Owner with the given kitId does not exist
 grant-user-access-to-kit.userEmail.notFound=User account with the given email does not exist
