FAC-147: Resolve conflicts

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -30,7 +30,8 @@ grant-user-access-to-kit.expertGroupOwner.notFound='Expert Group' Owner with the
 grant-user-access-to-kit.email.notFound=User account with the given email does not exist
 
 delete-user-access.kitId.notNull='kitId' may not be null
-delete-user-access.userId.notNull='userId' may not be null
+delete-user-access.email.notNull='email' may not be null
+delete-user-access.currentUserId.notNull='userId' may not be null
 delete-user-access.kit.notFound=AssessmentKit with the given id does not exist
 delete-user-access.user.notFound=User with the given id does not exist
 delete-user-access.kit-user.notFound=User access does not exist
