--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -28,7 +28,8 @@ grant-user-access-to-kit.email.notFound=User account with the given email does n
 
 get-kit-user-list.kit-id.notNull='kitId' may not be null
 get-kit-user-list.page.min='page' must be greater than or equal to 0
-get-kit-user-list.size.min='size' must be less than or equal to 1
-get-kit-user-list.size.max='size' must be greater than or equal to 100
+get-kit-user-list.size.min='size' must be greater than or equal to 1
+get-kit-user-list.size.max='size' must be less than or equal to 100
 get-kit-user-list.kit.notFound=AssessmentKit with the given id not found
+get-kit-user-list.expertGroupOwner.notFound='Expert Group' Owner with the given kitId does not exist
 get-kit-user-list.expert-group.notFound=ExpertGroup with the given id not found
