--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -7,7 +7,6 @@ create-assessment.assessmentKitId.notNull='assessmentKitId' may not be empty
 create-assessment.spaceId.notNull='spaceId' may not be empty
 create-assessment.colorId.notNull='colorId' may not be empty
 create-assessment.createdBy.notNull='createdBy' may not be null
-create-assessment.user.notFound=User with the given id does not exist
 create-assessment.duplicate.titleAndSpaceId=An assessment with the same 'title' and 'spaceId' already exists.
 
 create-assessmentresult.assessmentId.notFound='assessmentId' is not valid
@@ -40,6 +39,7 @@ update-assessment.title.notBlank=title may not be empty
 update-assessment.title.min=title length must be more than 3
 update-assessment.title.max=title length must be less than 100
 update-assessment.color-id.notNull='colorId' may not be empty
+update-assessment.lastModifiedBy.notNull='lastModifiedBy' may not be null
 
 calculate-assessment.assessment.id.notNull='assessmentId' may not be empty
 calculate-assessment.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
