--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -31,6 +31,8 @@ get-kit-user-list.page.min='page' must be greater than or equal to 0
 get-kit-user-list.size.min='size' must be greater than or equal to 1
 get-kit-user-list.size.max='size' must be less than or equal to 100
 
-delete-user-access.kitId.notNull='kitId' may not be null
-delete-user-access.email.notNull='email' may not be null
-delete-user-access.kit-user.notFound=User access does not exist
+delete-kit-user-access.kitId.notNull='kitId' may not be null
+delete-kit-user-access.email.notNull='email' may not be null
+delete-kit-user-access.kit-user.notFound=User access does not exist
+delete-kit-user-access.kitId.notFound=AssessmentKit with the given id does not exist
+delete-kit-user-access.email.notFound=User account with the given email does not exist
