--- a/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
@@ -1,2 +1,3 @@
 common.currentUser.notAllowed=Not allowed to perform this action
 common.currentUserId.notNull='currentUser' may not be null
+common.authorizationHeader.notNull=Missing Authorization header
