FAC-154 Implement a service to load kit minimal info

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -30,6 +30,8 @@ get-kit-user-list.kit-id.notNull='kitId' may not be null
 get-kit-user-list.page.min='page' must be greater than or equal to 0
 get-kit-user-list.size.min='size' must be greater than or equal to 1
 get-kit-user-list.size.max='size' must be less than or equal to 100
+get-kit-minimal-info.kitId.notNull='kitId' may not be empty
+get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exist
 
 delete-kit-user-access.kitId.notNull='kitId' may not be null
 delete-kit-user-access.email.notNull='email' may not be null
