--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -97,3 +97,4 @@ delete-evidence.id.notNull='evidenceId' may not be empty
 calculate-confidence.assessment.id.notNull='assessmentId' may not be empty
 calculate-confidence.assessmentResult.notFount=no assessmentResult found by this 'assessmentId'
 
+get-attribute-score-detail.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
