FAC-164:feature:Rename GetUserIdByEmail to GetUserByEmail in everywhere

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -36,5 +36,5 @@ delete-kit-user-access.email.notNull='email' may not be null
 delete-kit-user-access.kit-user.notFound=User access does not exist
 delete-kit-user-access.kitId.notFound=AssessmentKit with the given id does not exist
 delete-kit-user-access.email.notFound=User account with the given email does not exist
-get-user-id-by-email.email.notNull='email' may not be null
-get-user-id-by-email.email.notFound=User account with the given email does not exist
+get-user-by-email.email.notNull='email' may not be null
+get-user-by-email.email.notFound=User account with the given email does not exist
