FAC-163:feature:Impl ResourceAlreadyExistException for GrantUserAccessToKitService

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -25,6 +25,7 @@ grant-user-access-to-kit.kitId.notNull='kitId' may not be null
 grant-user-access-to-kit.userId.notNull='userId' may not be null
 grant-user-access-to-kit.kitId.notFound=AssessmentKit with the given id does not exist
 grant-user-access-to-kit.userId.notFound=User account with the given id does not exist
+grant-user-access-to-kit.userId.duplicate=User account already has access
 
 get-kit-user-list.kit-id.notNull='kitId' may not be null
 get-kit-user-list.page.min='page' must be greater than or equal to 0
