--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -41,3 +41,5 @@ delete-kit-user-access.kitId.notFound=AssessmentKit with the given id does not e
 delete-kit-user-access.user.notFound=User account with the given id does not exist
 get-user-by-email.email.notNull='email' may not be null
 get-user-by-email.email.notFound=User account with the given email does not exist
+
+upload-kit.dsl-file.notNull='dslFile' may not be null
