FAC-198: implement create kit usecase in service

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -43,6 +43,8 @@ get-user-by-email.email.notNull='email' may not be null
 get-user-by-email.email.notFound=User account with the given email does not exist
 
 create-kit-by-dsl.kit-dsl-json-id.notNull='kitJsonDslId' may not be null
+create-kit-by-dsl.kit-dsl.notFound=AssessmentKitDsl with the given id does not exist
+create-kit-by-dsl.kit-dsl-file.notFound=No file found by the given information
 create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
 create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 create-kit-by-dsl.title.notNull='title' may not be null
