FAC-176: Error messages added to messages_en.properties

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -41,3 +41,15 @@ delete-kit-user-access.kitId.notFound=AssessmentKit with the given id does not e
 delete-kit-user-access.user.notFound=User account with the given id does not exist
 get-user-by-email.email.notNull='email' may not be null
 get-user-by-email.email.notFound=User account with the given email does not exist
+
+create-expert-group.name.notBlank='name' may not be empty
+create-expert-group.name.size.max='name' must be less than maximum size
+create-expert-group.name.size.min='name' must be mire than minimum size
+create-expert-group.bio.notBlank='bio' may not be empty
+create-expert-group.bio.size.max='bio' must be less than maximum size
+create-expert-group.picture.notBlank='picture' may not be empty
+create-expert-group.picture.size.max='picture' must be less than maximum size
+create-expert-group.about.notBlank='about' may not be empty
+create-expert-group.about.size.max='about' must be less than maximum size
+create-expert-group.website.notBlank='website' may not be empty
+create-expert-group.website.size.max='website' must be less than maximum size
