FAC-176: Minor typo corrected

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -44,7 +44,7 @@ get-user-by-email.email.notFound=User account with the given email does not exis
 
 create-expert-group.name.notBlank='name' may not be empty
 create-expert-group.name.size.max='name' must be less than maximum size
-create-expert-group.name.size.min='name' must be mire than minimum size
+create-expert-group.name.size.min='name' must be more than minimum size
 create-expert-group.bio.notBlank='bio' may not be empty
 create-expert-group.bio.size.max='bio' must be less than maximum size
 create-expert-group.picture.notBlank='picture' may not be empty
