FAC-202: Extra Data removed from API's response and model

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -48,3 +48,4 @@ get-expert-group-list.page.min='page' must be greater than or equal to 0
 get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
 get-expert-group-by-id.expert-group.notFound=Expert Group with the given id does not exist
+get-expert-group-by-id.expert-group.notNull=Expert Group id must not be null
